src/objects/Time_Expense__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Time &amp; Expense</relationshipLabel>
        <relationshipName>Time_Expense</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Expense</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Research_Time__c</fullName>
        <label>Research Time(Minute)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Type__c</fullName>
        <label>Time Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>RCE</fullName>
                </value>
                <value>
                    <fullName>DP</fullName>
                </value>
                <value>
                    <fullName>CE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Time &amp; Expense</label>
    <nameField>
        <displayFormat>TE-{000}</displayFormat>
        <label>Time &amp; Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>